# fastapi-template

./: .dockerignore  .env.docker.example  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  compose.yaml  main.py  pyproject.toml
.agents/skills/fastapi-backend-project/: SKILL.md
.agents/skills/fastapi-backend-project/agents/: openai.yaml
.agents/skills/fastapi-backend-project/references/: anti-patterns.md  async-data-access.md  database-async-sqlalchemy.md  error-handling.md  feature-workflow.md  layered-feature-example.md  project-pattern-examples.md
.ai/skills/fastapi-backend-project/: SKILL.md
.ai/skills/fastapi-backend-project/agents/: openai.yaml
.ai/skills/fastapi-backend-project/references/: cache-rate-limit.md  database-async-sqlalchemy.md  testing-validation.md
.github/: copilot-instructions.md
app/api/: __init__.py  demo.py  health.py
app/core/: rate_limit.py
app/core/cache/: README.md  __init__.py  decorators.py  prefixes.py  redis.py
app/core/database/: __init__.py  postgresql.py
app/core/events/: __init__.py  shutdown.py  startup.py
app/core/log/: __init__.py  log_loguru.py
app/core/rate_limit/: __init__.py  rate_limiter.py
app/dependencies/: db.py  pagination.py
app/enums/: README.md  __init__.py  common.py
app/exceptions/: README.md  __init__.py  errors.py  handlers.py  validation_i18n.py
app/middlewares/: README.md  __init__.py  cors.py  gzip.py  jwt_auth.py
app/models/: base_model.py
app/repositories/: base_repo.py
app/schemas/: README.md  __init__.py  base_schema.py  demo_schema.py  health_schema.py  response.py  user_schema.py
app/services/: health_service.py
app/utils/: uuidv7.py
config/: __init__.py  app_config.py  cache_config.py  database_config.py  logger_config.py  middleware_config.py  rate_limit_config.py  settings.py
tests/: conftest.py  test_app_integration.py  test_auth_config_security.py  test_base_repository.py  test_cache_decorator.py  test_config_validation.py  test_cors_outer_middleware.py  test_database_session.py  test_docker_shutdown_budget.py  test_exception_response_contract.py  test_health.py  test_lifecycle_reliability.py  test_log_security.py  test_rate_limit.py  test_rate_limit_redis_integration.py  test_redis_atomic_expiry.py  test_redis_data_safety.py  test_redis_reconnect.py  test_runtime_config.py  test_time_contract.py  test_uuid.py
